Make URLs work when Bolt is installed in a subfolder

--- a/index.twig
+++ b/index.twig
@@ -70,7 +70,7 @@
 
     {% endfor %}
 
-    {% setcontent news = 'news/latest/4' %}
+    {% setcontent news = 'entries/latest/4' %}
     <!-- Four -->
         <section id="four" class="wrapper alt style1">
             <div class="inner">
@@ -89,7 +89,7 @@
 
                 </section>
                 <ul class="actions">
-                    <li><a href="pages/" class="button">Browse All</a></li>
+                    <li><a href="{{ paths.root }}pages" class="button">Browse All</a></li>
                 </ul>
             </div>
         </section>
