--- a/master.twig
+++ b/master.twig
@@ -22,7 +22,7 @@
 
                 <!-- Header -->
                     <header id="header" {% block headerClass %}{% endblock headerClass %}>
-                        <h1><a href="/">Solid State</a></h1>
+                        <h1><a href="{{ paths.root }}">Solid State</a></h1>
                         <nav>
                             <a href="#menu">Menu</a>
                         </nav>
